@startuml AquaGuard_UML_Class_Diagram

' ============================================================
'  AquaGuard — Flood Alert & Rescue Web Platform
'  UML Class Diagram (PlantUML)
'  Version: 2.0 | Date: 2026-04-15
'  14 Classes | 21 Relationships
' ============================================================

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #E8EAF6
skinparam classBorderColor #3949AB
skinparam arrowColor #37474F
skinparam stereotypeFontSize 11

skinparam packageStyle rectangle
skinparam linetype ortho

' ============================
'  SECTION 1: USER HIERARCHY
' ============================

abstract class User {
  -id : Int
  -phoneNumber : String
  -passwordHash : String
  -resetToken : String
  -resetTokenExpiry : DateTime
  -displayName : String
  -email : String
  -avatarUrl : String
  -gender : String
  -dateOfBirth : Date
  -emergencyContact : String
  #role : String
  -isActive : Boolean
  -address : String
  -latitude : Float
  -longitude : Float
  -locationUpdatedAt : DateTime
  -safetyStatus : String
  -healthNote : String
  -createdAt : DateTime
  -updatedAt : DateTime
  +register(phoneNumber : String, password : String, name : String, role : String) : User
  +login(phoneNumber : String, password : String) : String
  +logout() : void
  +updateProfile(data : Object) : User
  +changePassword(currentPassword : String, newPassword : String) : Boolean
  +requestPasswordReset(phoneNumber : String) : void
  +verifyOtp(otp : String) : String
  +resetPassword(sessionToken : String, newPassword : String) : Boolean
  +updateLocation(latitude : Float, longitude : Float) : void
  +updateSafetyStatus(status : String, healthNote : String) : void
  +uploadAvatar(file : File) : String
}

class Citizen {
  -sosRequestCount : Int
  -familyMemberCount : Int
  -lastSosDate : DateTime
  +submitSOS(location : String, description : String, urgency : String, images : File[]) : RescueRequest
  +getMySosRequests() : RescueRequest[]
  +trackRescueStatus(requestId : Int) : RescueRequest
  +sendFamilyRequest(receiverId : Int, relation : String) : FamilyConnection
  +acceptFamilyRequest(connectionId : Int) : void
  +rejectFamilyRequest(connectionId : Int) : void
  +viewFamilyMembers() : User[]
  +removeFamilyConnection(connectionId : Int) : void
  +askChatbot(question : String) : String
}

class Rescuer {
  -missionsCompleted : Int
  -currentMissionId : Int
  -isAvailable : Boolean
  +viewPendingRequests() : RescueRequest[]
  +acceptMission(requestId : Int, latitude : Float, longitude : Float, mode : String) : void
  +cancelMission(requestId : Int) : void
  +completeMission(requestId : Int) : void
  +createGroup(name : String, description : String) : RescueGroup
  +editGroup(groupId : Int, data : Object) : RescueGroup
  +inviteMember(groupId : Int, phoneNumber : String) : RescueGroupInvite
  +acceptGroupInvite(inviteId : Int) : void
  +declineGroupInvite(inviteId : Int) : void
  +leaveGroup(groupId : Int) : void
  +removeMember(groupId : Int, userId : Int) : void
  +promoteMember(groupId : Int, userId : Int, role : String) : void
  +sendLocationUpdate(latitude : Float, longitude : Float) : void
}

class Admin {
  -adminLevel : Int
  -lastLoginIp : String
  -managedZoneCount : Int
  +getAllUsers() : User[]
  +updateUserRole(userId : Int, newRole : String) : void
  +assignRescuer(requestId : Int, rescuerId : Int) : void
  +forceCompleteRequest(requestId : Int) : void
  +createFloodZone(name : String, severity : String, polygon : Float[][]) : FloodZone
  +editFloodZone(zoneId : String, data : Object) : FloodZone
  +deleteFloodZone(zoneId : String) : void
  +createNewsArticle(title : String, content : String, coverImage : File) : NewsArticle
  +viewAnalytics() : Object
  +viewAuditLogs() : AuditLog[]
}

' ============================
'  SECTION 2: RESCUE DOMAIN
' ============================

class RescueRequest {
  -id : Int
  -userId : Int
  -location : String
  -description : String
  -latitude : Float
  -longitude : Float
  -images : String[]
  -urgency : String
  -status : String
  -assignedTo : Int
  -assignedGroupId : Int
  -acceptedMode : String
  -rescuerLatitude : Float
  -rescuerLongitude : Float
  -lastCancelledBy : Int
  -lastCancelledAt : DateTime
  -assignedAt : DateTime
  -resolvedAt : DateTime
  -createdAt : DateTime
  -updatedAt : DateTime
  +create(userId : Int, location : String, description : String, urgency : String) : RescueRequest
  +assign(rescuerId : Int) : void
  +accept(rescuerId : Int, mode : String) : void
  +cancel(cancelledBy : Int) : void
  +complete() : void
  +updateRescuerLocation(lat : Float, lng : Float) : void
  +getStatusHistory() : RescueRequestLog[]
}

class RescueRequestLog {
  -id : Int
  -requestId : Int
  -changedBy : Int
  -oldStatus : String
  -newStatus : String
  -note : String
  -createdAt : DateTime
  +create(requestId : Int, changedBy : Int, oldStatus : String, newStatus : String, note : String) : RescueRequestLog
  +getByRequest(requestId : Int) : RescueRequestLog[]
}

' ============================
'  SECTION 3: TEAM DOMAIN
' ============================

class RescueGroup {
  -id : Int
  -name : String
  -description : String
  -createdBy : Int
  -leaderId : Int
  -status : String
  -createdAt : DateTime
  -updatedAt : DateTime
  +create(name : String, description : String, createdBy : Int) : RescueGroup
  +update(name : String, description : String) : void
  +archive() : void
  +getMembers() : RescueGroupMember[]
  +getStats() : Object
  +getInvites() : RescueGroupInvite[]
}

class RescueGroupMember {
  -id : Int
  -groupId : Int
  -userId : Int
  -memberRole : String
  -joinStatus : String
  -joinedAt : DateTime
  -updatedAt : DateTime
  +join(groupId : Int, userId : Int, memberRole : String) : RescueGroupMember
  +leave() : void
  +remove() : void
  +updateRole(newRole : String) : void
}

class RescueGroupInvite {
  -id : Int
  -groupId : Int
  -invitedUserId : Int
  -invitedPhoneNumber : String
  -invitedBy : Int
  -status : String
  -createdAt : DateTime
  -respondedAt : DateTime
  +send(groupId : Int, invitedUserId : Int, invitedBy : Int) : RescueGroupInvite
  +accept() : void
  +decline() : void
  +cancel() : void
}

' ============================
'  SECTION 4: FAMILY DOMAIN
' ============================

class FamilyConnection {
  -id : Int
  -requesterId : Int
  -receiverId : Int
  -relation : String
  -status : String
  -createdAt : DateTime
  -updatedAt : DateTime
  +send(requesterId : Int, receiverId : Int, relation : String) : FamilyConnection
  +accept() : void
  +reject() : void
  +remove() : void
}

' ============================
'  SECTION 5: SYSTEM SERVICES
' ============================

class Notification {
  -id : Int
  -userId : Int
  -type : String
  -title : String
  -body : String
  -metadata : JSON
  -isRead : Boolean
  -createdAt : DateTime
  +create(userId : Int, type : String, title : String, body : String, metadata : JSON) : Notification
  +markAsRead() : void
  +getUnreadCount(userId : Int) : Int
  +getNotifications(userId : Int) : Notification[]
}

class NewsArticle {
  -id : Int
  -authorId : Int
  -title : String
  -content : String
  -coverImageUrl : String
  -status : String
  -category : String
  -publishedAt : DateTime
  -createdAt : DateTime
  -updatedAt : DateTime
  +create(authorId : Int, title : String, content : String) : NewsArticle
  +update(title : String, content : String) : void
  +publish() : void
  +archive() : void
  +uploadCoverImage(file : File) : String
}

class FloodZone {
  -id : String
  -name : String
  -severity : String
  -description : String
  -waterLevel : Float
  -latitude : Float
  -longitude : Float
  -polygon : Float[][]
  -createdBy : Int
  -createdAt : DateTime
  -updatedAt : DateTime
  +create(name : String, severity : String, polygon : Float[][]) : FloodZone
  +update(data : Object) : void
  +delete() : void
  +syncToAllUsers() : void
}

class AuditLog {
  -id : Int
  -userId : Int
  -action : String
  -targetType : String
  -targetId : Int
  -beforeData : JSON
  -afterData : JSON
  -ipAddress : String
  -createdAt : DateTime
  +log(userId : Int, action : String, targetType : String, targetId : Int, beforeData : JSON, afterData : JSON, ipAddress : String) : AuditLog
  +getByUser(userId : Int) : AuditLog[]
  +getByTarget(targetType : String, targetId : Int) : AuditLog[]
}

' ============================================================
'  RELATIONSHIPS
' ============================================================

' ── R1–R3: Generalisation (hollow triangle arrow TO parent) ──
Citizen --|> User
Rescuer --|> User
Admin --|> User

' ── R4: Association — Citizen submits RescueRequest ──
Citizen "1" -- "0..*" RescueRequest : submits >

' ── R5: Association — Rescuer handles RescueRequest ──
Rescuer "0..1" -- "0..*" RescueRequest : handles >

' ── R6: Association — Admin assigns rescuer to RescueRequest ──
Admin "0..1" -- "0..*" RescueRequest : assigns rescuer to >

' ── R7: Association — Rescuer creates RescueGroup ──
Rescuer "1" -- "0..*" RescueGroup : creates >

' ── R8: Association — Rescuer leads RescueGroup ──
Rescuer "1" -- "0..1" RescueGroup : leads >

' ── R9: Composition — RescueRequest *-- RescueRequestLog ──
RescueRequest "1" *-- "0..*" RescueRequestLog : contains >

' ── R10: Composition — RescueGroup *-- RescueGroupMember ──
RescueGroup "1" *-- "0..*" RescueGroupMember : contains >

' ── R11: Composition — RescueGroup *-- RescueGroupInvite ──
RescueGroup "1" *-- "0..*" RescueGroupInvite : contains >

' ── R12: Aggregation — User o-- Notification ──
User "1" o-- "0..*" Notification : receives >

' ── R13: Aggregation — RescueGroup o-- RescueRequest ──
RescueGroup "0..1" o-- "0..*" RescueRequest : assigned to >

' ── R14: Association — User initiates FamilyConnection ──
User "1" -- "0..*" FamilyConnection : initiates >

' ── R15: Association — User receives FamilyConnection ──
User "1" -- "0..*" FamilyConnection : receives >

' ── R16: Association — Admin authors NewsArticle ──
Admin "0..1" -- "0..*" NewsArticle : authors >

' ── R17: Association — Admin manages FloodZone ──
Admin "1" -- "0..*" FloodZone : manages >

' ── R18: Association — User performs AuditLog ──
User "0..1" -- "0..*" AuditLog : performs >

' ── R19: Association — User is member of RescueGroup (via RescueGroupMember) ──
User "0..*" -- "0..1" RescueGroupMember : participates in >

' ── R20: Association — User is invited via RescueGroupInvite ──
User "1" -- "0..*" RescueGroupInvite : is invited via >

' ── R21: Association — User logs change in RescueRequestLog ──
User "0..1" -- "0..*" RescueRequestLog : logs change in >

' ============================================================
'  LAYOUT HINTS
' ============================================================

User -[hidden]down- RescueRequest
RescueGroup -[hidden]right- RescueRequest
Notification -[hidden]right- NewsArticle

@enduml
